# exodia

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package.json  vercel.json
.agents/: exodia.agent.json
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  desktop_entry.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  events.py  health.py  modules.py  pentest.py  reports.py  scans.py  settings.py  sre.py  targets.py
backend/app/core/: auth.py  config.py  constants.py  logging.py  security.py
backend/app/database/: models.py  session.py
backend/app/database/migrations/: env.py
backend/app/jobs/: manager.py  schemas.py
backend/app/modules/: base.py  custom_interceptor.py  http_utils.py
backend/app/modules/pentest/: __init__.py  module.py
backend/app/modules/port_probe/: __init__.py  module.py
backend/app/modules/robots_checker/: __init__.py  module.py
backend/app/modules/security_txt_checker/: __init__.py  module.py
backend/app/modules/sre/: __init__.py  module.py
backend/app/modules/tech_fingerprint/: __init__.py  module.py
backend/app/modules/tls_analyzer/: __init__.py  module.py
backend/app/plugins/: __init__.py  loader.py  registry.py
backend/app/reports/: exporters.py  generator.py
backend/app/schemas/: auth.py  common.py  modules.py  pentest.py  reports.py  scans.py  settings.py  sre.py  targets.py
backend/app/services/: pentest.py  sre.py
backend/tests/: conftest.py  test_api.py  test_modules.py  test_scoring_and_reports.py  test_target_validation.py
(+64 files in other folders)
